# arena_ecs

./: Cargo.toml
benches/: bench.rs
examples/: ships.rs  space.rs
examples/space/: colony.rs  government.rs  main.rs  orbit.rs  state.rs  surface.rs  system.rs
examples/space/body/: mod.rs  moon.rs  planet.rs
src/: allocator.rs  arena.rs  component.rs  generation.rs  ids.rs  index.rs  lib.rs  map.rs  traits.rs
src/allocator/: alloc_gen.rs  dynamic.rs  fixed.rs  mod.rs
src/ids/: edge.rs  gen.rs  generation.rs  id.rs  index.rs  mod.rs  pair.rs  valid.rs
src/storage/: component.rs  graph.rs  id_link.rs  map.rs  mod.rs  simd_component.rs
src/tables/: column.rs  id_column.rs  id_indices.rs  index.rs  macros.rs  mod.rs
src/tables/macros/: index_enum.rs  mod.rs  row_enum.rs  table.rs  table_array.rs  test.rs
