[package]
name = "arena_ecs"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
panic = "abort"

[dev-dependencies]
rand = "0.7.3"

[dependencies]
paste = "*"
fnv = "1.0.7"
bit-vec = "0.6.2"
packed_simd = "*"

[[example]]
name = "space"

[[example]]
name = "ships"