[package]
name = "arena_ecs"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3"

[dependencies]
bit-vec = { version = "0.6", features = ['serde'] }

[dependencies.rayon]
version = "1.3"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
default-features = false

[[example]]
name = "space"

[[bench]]
name = "bench"
harness = false