[package]
name = "gen_id"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

[dependencies]
# bit-vec = { version = "0.6", features = ['serde'] }
bit-vec = { version = "0.6" }
fnv = "1.0"
iter_context = { git = "https://github.com/frsrblch/typed_iter" }

[dependencies.rayon]
version = "1.3"
optional = true
default-features = false

# [dependencies.serde]
# version = "1.0"
# features = ["derive"]
# optional = true
# default-features = false

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3"

[[example]]
name = "space"

[[bench]]
name = "bench"
harness = false